Add timing video

--- a/index.html
+++ b/index.html
@@ -266,6 +266,13 @@ You can disregard the above note if you're just converting timing points and you
 <br />
 
 <details>
+<summary>Click for timing instructions</summary>
+<video controls width="800">
+  <source src="./timing.mp4" />
+</video>
+</details>
+
+<details>
 <summary>Click for SV instructions</summary>
 
 <img src="./sv.jpg" alt="" style="width:800px" /><br />
