Add timing instructions

--- a/index.html
+++ b/index.html
@@ -270,6 +270,9 @@ You can disregard the above note if you're just converting timing points and you
 <video controls width="800">
   <source src="./timing.mp4" />
 </video>
+<br /><br />
+You Ctrl+click and drag the timing points. In the video, I put the time signature denominator to like x/16 so the metronome ticks faster.<br />
+Time signatures don't actually get converted, so you gotta set those on osu! instead if you want to.
 </details>
 
 <details>
