--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@ const getSV = (line, sps) => {
     return payload;
   }
 
-  // Reset: 10000 bpm + 10x for 1 ms, then reset
+  // Reset: 1e100 bpm + 10x for 1 ms, then reset
   if (fn === 'reset') {
     return [
       {
         time: DUMB_OFFSET,
         index: +index,
-        bpm: 10000
+        bpm: 1e100
       },
       {
         time: DUMB_OFFSET,
@@ -81,12 +81,12 @@ const getSV = (line, sps) => {
         multiplier: 10
       },
       {
-        time: DUMB_OFFSET + 0.001,
+        time: DUMB_OFFSET + 0.00001,
         index: +index,
         resetBPM: true // bubble that in the bpm loop
       },
       {
-        time: DUMB_OFFSET + 0.001,
+        time: DUMB_OFFSET + 0.00001,
         index: +index,
         multiplier: Math.max(+value, MIN_MULT)
       }
